codex fixed err up for run