@@ -55,6 +55,12 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
             <version>${spark.version}</version>
@@ -65,18 +71,6 @@
             <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
-        <dependency>
-           <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.23.0</version>
-            <!-- <scope>test</scope> -->
-        </dependency>
-            <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.23.0</version> <!-- Use latest version, requires Java 11+ -->
-            <!-- <scope>test</scope> -->
-        </dependency>
     </dependencies>
 
 
@@ -85,9 +79,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!-- <configuration> -->
-                <!--     <mainClass>com.baeldung.spring.kafka.KafkaApplication</mainClass> -->
-                <!-- </configuration> -->
+                <configuration>
+                    <jvmArguments>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmArguments>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
